--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 </head>
 
-<body id="page-top">
+<body id="page-top" style="background-color: aliceblue;">
 
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -78,14 +78,14 @@
                             <a href="#download" class="btn btn-outline btn-xl page-scroll">Try it for Free!</a>
                         </div>
                     </div>
-                </div>
+                </div>  
                 <div class="col-sm-5">
                     <div class="device-container">
                         <div class="device-mockup galaxy_s5 portrait white">
                             <div class="device">
-                                <div class="screen">
+                                <div class="screen" style= "margin-left:2.3%!important">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt="">
+                                    <img src="img/home.jpg" class="img-responsive" alt="">
                                 </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -98,7 +98,7 @@
         </div>
     </header>
 
-    <section id="download" class="download bg-primary text-center">
+    <section id="download" class="download bg-primary text-center" style="background-color:#1E9377;">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -131,7 +131,7 @@
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt=""> </div>
+                                    <img src="img/ban.jpg" class="img-responsive" alt=""> </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
                                 </div>
@@ -177,9 +177,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>  
 
-    <section id="contact" class="contact bg-primary">
+    <section id="contact" class="contact bg-primary" style="background-color:#1E9377">
         <div class="container">
             <h2>We <i class="fa fa-heart"></i> new friends!</h2>
             <ul class="list-inline list-social">
