--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Serflix</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Passflix</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,7 +73,7 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>Serflix</h1>
+                            <h1>PassFlix</h1>
                             <h2>Movie recommendation app for Android that learns your preferences for every ocasion</h2>
                             <a href="#download" class="btn btn-outline btn-xl page-scroll">Try it for Free!</a>
                         </div>
@@ -83,7 +83,7 @@
                     <div class="device-container">
                         <div class="device-mockup galaxy_s5 portrait white">
                             <div class="device">
-                                <div class="screen" style= "margin-left:2.3%!important">
+                                <div class="screen" style= "margin-left:3.3%!important">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
                                     <img src="img/home.jpg" class="img-responsive" alt="">
                                 </div>
@@ -102,7 +102,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2 class="section-heading">Discover what all the buzz is about!</h2>
+                    <h2 class="section-heading">Discover what all the Passflix is about!</h2>
                     <p>Our app is available on any mobile device! Download now to get started!</p>
                     <div class="badges">
                         <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
@@ -118,8 +118,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
-                        <h2>Unlimited Features, Unlimited Fun</h2>
-                        <p class="text-muted">Check out what you can do with this app theme!</p>
+                        <h2>Unlimited Films, Unlimited fun!!</h2>
+                        <p class="text-muted">Check out what you can do with this app !</p>
                         <hr>
                     </div>
                 </div>
@@ -145,15 +145,15 @@
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Device Mockups</h3>
-                                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                    <h3>See your films on your smarphone</h3>
+                                    <p class="text-muted">All you can view on your smartphone!</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-camera text-primary"></i>
-                                    <h3>Flexible Use</h3>
-                                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                                    <h3>Share your moments!</h3>
+                                    <p class="text-muted">Put an image, video, animation, or anything else in your social media with your friends!</p>
                                 </div>
                             </div>
                         </div>
@@ -162,14 +162,14 @@
                                 <div class="feature-item">
                                     <i class="icon-present text-primary"></i>
                                     <h3>Free to Use</h3>
-                                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                                    <p class="text-muted">All is free if you want see some films!</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-lock-open text-primary"></i>
                                     <h3>Open Source</h3>
-                                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                                    <p class="text-muted">If you want implement Passflix method, you can do that for free!</p>
                                 </div>
                             </div>
                         </div>
